--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "clean": "rimraf dist",
     "copy": "node copy.js",
     "build": "npm run clean && npm run copy && webpack -d",
+    "now-start": "http-server ./dist",
+    "now-build": "echo Nothing todo for now.",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,6 +26,7 @@
     "cpx": "^1.5.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "http-server": "^0.9.0",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
